--- a/index.html
+++ b/index.html
@@ -108,96 +108,143 @@
       </div>
     </section>
 
-    <!-- O QUE EU FAÇO -->
-    <section class="py-28 relative">
-      <div class="absolute inset-0 bg-gradient-radial-purple opacity-20"></div>
+   <!-- O QUE EU FAÇO -->
+<section class="py-32 relative">
+  <div class="absolute inset-0 bg-gradient-radial-purple opacity-20"></div>
 
-      <div class="relative z-10 max-w-4xl mx-auto px-6">
-        <h2 class="text-3xl md:text-5xl font-bold mb-10 text-center">
-          O que eu faço
-        </h2>
+  <div class="relative z-10 max-w-3xl mx-auto px-6">
 
-        <div class="space-y-6 text-lg text-gray-300 leading-relaxed">
-          <p>
-            Eu ajudo pessoas a saírem do zero (ou de onde estiverem travadas)
-            até a fluência no inglês, com naturalidade e leveza — sem depender
-            de gramática complicada nem de métodos mirabolantes.
-          </p>
+    <h2 class="text-3xl md:text-5xl font-bold mb-16 text-center">
+      O que eu faço
+    </h2>
 
-          <p>
-            Já ajudei dezenas de alunos a compreender, falar e manter conversas
-            reais em inglês usando um sistema enxuto e previsível.
-          </p>
+    <div class="space-y-10 text-lg text-gray-300 leading-relaxed">
 
-          <p>
-            O foco é simples: construção sólida de pronúncia e compreensão
-            desde o primeiro dia, para que o estudo finalmente se converta
-            em segurança real ao falar.
-          </p>
-        </div>
+      <p class="text-xl md:text-2xl font-semibold text-white">
+        Eu ajudo pessoas a saírem do zero — ou de onde estiverem travadas —
+        até a fluência no inglês.
+      </p>
+
+      <p>
+        Com naturalidade. Com leveza.  
+        Sem depender de gramática complicada.  
+        Sem métodos mirabolantes.
+      </p>
+
+      <p class="font-semibold text-white">
+        É isso. E não é teoria.
+      </p>
+
+      <p>
+        Já ajudei dezenas de alunos a compreender, falar e manter conversas
+        reais em inglês usando um sistema enxuto e previsível.
+      </p>
+
+      <p>
+        O foco é simples: construção sólida de pronúncia e compreensão desde
+        o primeiro dia — para que o estudo finalmente se converta em segurança real.
+      </p>
+
+      <p class="text-xl font-semibold text-glow-purple">
+        Aqui eu não ensino você a estudar mais.
+      </p>
+
+      <p class="text-xl font-semibold text-white">
+        Eu ensino você a estruturar o aprendizado da forma correta.
+      </p>
+
+      <p>
+        Para que ele finalmente se transforme em clareza, confiança e fluência real.
+      </p>
+
+    </div>
+  </div>
+</section>
+
+ <!-- PARA QUEM FUNCIONA -->
+<section class="py-32 bg-card/40">
+  <div class="max-w-5xl mx-auto px-6">
+
+    <h2 class="text-3xl md:text-5xl font-bold mb-16 text-center">
+      Para quem isso funciona de verdade?
+    </h2>
+
+    <div class="grid md:grid-cols-2 gap-12 text-gray-300 text-lg">
+
+      <div class="space-y-5">
+        <p class="font-semibold text-white">Funciona para quem:</p>
+        <p>• Já estudou inglês por meses (ou anos)</p>
+        <p>• Já investiu em cursos, aplicativos ou métodos tradicionais</p>
+        <p>• Já tentou fazer “do jeito certo”</p>
+        <p>• Percebeu que estudar não está se convertendo em segurança para falar</p>
       </div>
-    </section>
 
-    <!-- PARA QUEM FUNCIONA -->
-    <section class="py-28 bg-card/40">
-      <div class="max-w-5xl mx-auto px-6">
-        <h2 class="text-3xl md:text-5xl font-bold mb-12 text-center">
-          Para quem isso funciona de verdade?
-        </h2>
-
-        <div class="grid md:grid-cols-2 gap-8 text-gray-300">
-          <div class="space-y-4">
-            <p>✔ Já estudou inglês por meses ou anos</p>
-            <p>✔ Já investiu em cursos e aplicativos</p>
-            <p>✔ Já tentou fazer “do jeito certo”</p>
-            <p>✔ Percebe que estudar não virou segurança para falar</p>
-          </div>
-
-          <div class="space-y-4">
-            <p>✔ Entende bastante, mas trava ao falar</p>
-            <p>✔ Sente que sempre está começando do zero</p>
-            <p>✔ Quer sair da sobrevivência e ganhar confiança</p>
-            <p>✔ Busca clareza de progresso real</p>
-          </div>
-        </div>
-
-        <div class="mt-12 text-center text-gray-400 max-w-2xl mx-auto">
-          <p>
-            O ponto em comum não é o nível de inglês.
-            <br /><br />
-            <span class="text-glow-purple font-semibold">
-              É maturidade no aprendizado.
-            </span>
-          </p>
-        </div>
+      <div class="space-y-5">
+        <p class="font-semibold text-white">Aqui entram pessoas que:</p>
+        <p>• Entendem bastante coisa, mas travam ao falar</p>
+        <p>• Sentem que sempre estão começando do zero</p>
+        <p>• Estudam sem clareza de progresso real</p>
+        <p>• Querem sair da sobrevivência e ganhar confiança</p>
       </div>
-    </section>
+
+    </div>
+
+    <div class="mt-20 text-center max-w-2xl mx-auto">
+      <p class="text-xl text-gray-400">
+        O ponto em comum não é o nível de inglês.
+      </p>
+
+      <p class="text-2xl font-semibold text-glow-purple mt-6">
+        É maturidade no aprendizado.
+      </p>
+    </div>
+
+  </div>
+</section>
 
     <!-- FILTRO -->
-    <section class="py-28 relative">
-      <div class="absolute inset-0 bg-gradient-radial-purple opacity-30"></div>
+<section class="py-32 relative">
+  <div class="absolute inset-0 bg-gradient-radial-purple opacity-30"></div>
 
-      <div class="relative z-10 max-w-4xl mx-auto px-6 text-center">
-        <h2 class="text-3xl md:text-5xl font-bold mb-12">
-          Não avance se você:
-        </h2>
+  <div class="relative z-10 max-w-3xl mx-auto px-6 text-center">
 
-        <div class="space-y-6 text-lg text-gray-300">
-          <p>
-            1. Quer uma fórmula mágica para falar inglês em 30 dias.
-          </p>
-          <p>
-            2. Acredita que decorar regras gramaticais gera fluência.
-          </p>
-          <p>
-            3. Busca apenas traduzir frases sem desenvolver compreensão real.
-          </p>
-          <p>
-            4. Não está disposto a seguir um processo estruturado e progressivo.
-          </p>
-        </div>
-      </div>
-    </section>
+    <h2 class="text-3xl md:text-5xl font-bold mb-16">
+      Não avance se você:
+    </h2>
+
+    <div class="space-y-8 text-lg text-gray-300">
+
+      <p>1. Quer aprender inglês apenas por curiosidade, sem compromisso real.</p>
+
+      <p>2. Busca um atalho milagroso para falar fluente em poucas semanas.</p>
+
+      <p>3. Acredita que fluência vem apenas decorando regras gramaticais.</p>
+
+      <p>4. Não está disposto a seguir um processo estruturado e progressivo.</p>
+
+    </div>
+
+    <div class="mt-20 space-y-6">
+
+      <p class="text-xl text-white font-semibold">
+        Existe um pequeno grupo de pessoas que parou de acumular conteúdo
+        e começou a construir habilidade de verdade.
+      </p>
+
+      <p class="text-gray-400">
+        Pessoas que não estudam mais horas.
+        <br>
+        Estudam com estrutura.
+      </p>
+
+      <p class="text-2xl font-semibold text-glow-purple">
+        E é por isso que evoluem.
+      </p>
+
+    </div>
+
+  </div>
+</section>
 
     <!-- CTA FINAL -->
     <section class="py-28 bg-card/40 text-center">
