--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       Para quem isso funciona de verdade?
     </h2>
 
-    <div class="grid md:grid-cols-2 gap-12 text-gray-300 text-lg">
+    <div class="grid md:grid-cols-1 text-gray-300 text-lg">
 
       <div class="space-y-5">
         <p class="font-semibold text-white">Funciona para quem:</p>
