--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       Para quem isso funciona de verdade?
     </h2>
 
-    <div class="grid md:grid-cols-1 gap-12 center text-gray-300 text-lg">
+    <div class="max-w-2xl mx-auto text-center text-gray-300 text-lg space-y-12">
 
       <div class="space-y-5">
         <p class="font-semibold text-white">Funciona para quem:</p>
