--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Mentoria de Inglês</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
-
+    <script defer src="/_vercel/insights/script.js"></script>
     <script>
       tailwind.config = {
         theme: {
